完成文章管理的相关开发

--- a/user/user_info.html
+++ b/user/user_info.html
@@ -15,7 +15,7 @@
 <body>
     <!-- 卡片区域 -->
     <div class="layui-card">
-        <div class="layui-card-header">卡片面板</div>
+        <div class="layui-card-header">个人信息</div>
         <div class="layui-card-body">
             <!-- form表单区域 -->
             <form class="layui-form" lay-filter="formUserInfo">
